# athome_hardware

./: .gitignore
firmware/ecsbox/: CMakeLists.txt
firmware/ecsbox/components/adcreader/: CMakeLists.txt
firmware/ecsbox/components/adcreader/src/: adcreader.c
firmware/ecsbox/components/buzzer/: CMakeLists.txt
firmware/ecsbox/components/buzzer/include/: buzzer.h
firmware/ecsbox/components/e_stop/: CMakeLists.txt
firmware/ecsbox/components/e_stop/include/: e_stop.h
firmware/ecsbox/components/e_stop/src/: e_stop.c
firmware/ecsbox/components/esp32_serial_transport/: CMakeLists.txt
firmware/ecsbox/components/esp32_serial_transport/include/: esp32_serial_transport.h
firmware/ecsbox/components/esp32_serial_transport/src/: esp32_serial_transport.c
firmware/ecsbox/components/rele/: CMakeLists.txt
firmware/ecsbox/components/rele/include/: rele.h
firmware/ecsbox/components/uros_client/: CMakeLists.txt
firmware/ecsbox/components/uros_client/include/: uros_client.h
firmware/ecsbox/components/uros_tasks/: CMakeLists.txt
firmware/ecsbox/components/uros_tasks/include/: uros_tasks.h
firmware/ecsbox/components/uros_tasks/src/: uros_tasks.c
firmware/ecsbox/main/: CMakeLists.txt  buzzer.c  main.c  rele.c  test_button.c  uros_client.c  uros_tasks.c
firmware/ecsbox/main/include/: test_button.h  uros_tasks.h
firmware/ecsbox_serial_transport/: CMakeLists.txt
firmware/ecsbox_serial_transport/main/: CMakeLists.txt  adcreader.c  buzzer.c  esp32_serial_transport.h  main.c  rele.c  test_button.c  uros_client.c
firmware/ecsbox_serial_transport/main/include/: adcreader.h  uros_client.h
