idf_component_register(SRCS main.c
                            uros_client.c
                            uros_tasks.c
                            adcreader.c 
                            test_button.c 
                            rele.c 
                            buzzer.c 
                            esp32_serial_transport.c  
                            INCLUDE_DIRS "" "include")